--- a/pacote-d012/style.css
+++ b/pacote-d012/style.css
@@ -13,44 +13,77 @@
     padding: 0%;
 }
 
+html, body {
+    min-height: 100%;
+}
+
 header {
     background-color: black;
     color: white;
     text-align: center;
     font-family: var(--font-destaque);
+}
 
+header > h1 {
+    font-variant: small-caps;
+    padding-top: 50px;
+    font-size: 10vw;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 main section {
     font-family: var(--fonte-padrao);
-    padding: 20px;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 30px;
+    font-size: 3.5vw;
 }
 
-.cordel1 {
+section.normal {
     background-color: white;
+    color: black;
+    line-height: 2em;
 }
 
-.cordel2 {
-    background-image: url(imagens/background001.jpg);
+section.imagem {
+    background-color: rgba(44, 42, 42, 0.89);
+    color: white;
+}
+
+section.imagem >p {
+    background-color: rgba(0, 0, 0, 0.253);
+    display: inline-block;
+    padding: 5px;
+}
+
+section#cordel1 {
+    background: url(imagens/background001.jpg) center center no-repeat fixed;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed ;
-    background-position: center center;
-    box-shadow: 10px;
-
 }
 
-.cordel3 {
-
-}
-
-.cordel4 {
-    background-image: url(imagens/background002.jpg);
+section#cordel2 {
     background: url(imagens/background002.jpg) center center no-repeat fixed;
     background-size: cover;
-
 }
 
-.cordel5 {
-
+footer {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-family: var(--fonte-padrao);
+    font-size: 1em;
 }
