--- a/resumo_style.css
+++ b/resumo_style.css
@@ -46,3 +46,12 @@ a#css {
    display: block;
 
 }
+
+table {
+   border-collapse: collapse;
+}
+
+td {
+   border: 1px solid black;
+   padding: 5px;
+}
