--- a/Projetos/redes/style_redes.css
+++ b/Projetos/redes/style_redes.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
-* {margin: 0px;
-   padding: 0px;
+* {
+    margin: 0PX;
+    padding: 0px;
 }
 
 html, body {
@@ -16,19 +17,27 @@ body {
 
 main {
     position: relative;
-    height: 100vh;
-
+    height: 100vw;
 }
 
 section#telefone {
+    height: 627px;
+    width: 311px;
+    background: url(img/frame-iphone.png) no-repeat fixed;
+
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
-    height: 627px;
-    width: 311px;
-    background: url(img/frame-iphone.png) no-repeat;
-
-
 }
+
+img.tela{
+    padding: 80px 22px;
+    height: 470px;
+}
+
+img.home {
+    height: 50px;
+}
+
+
